# rid-simulator-app

./: index.html  package.json  pnpm-lock.yaml  wifi-setting.sh
src/: main.ts  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  mqtt_manager.rs  rid_simulator.rs
src-tauri/src/message/: base_message.rs  message.rs  mod.rs  packet_message.rs  position_vector_message.rs  system_message.rs
